--- a/app/src/main/res/layout/info_adapter_item.xml
+++ b/app/src/main/res/layout/info_adapter_item.xml
@@ -12,40 +12,58 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_height="150dp">
+
+
+        <androidx.cardview.widget.CardView
+                android:id="@+id/mainCardView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:cardBackgroundColor="@android:color/white"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="10dp">
+        </androidx.cardview.widget.CardView>
 
         <TextView
                 android:id="@+id/textHeader"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:mutableText="@{viewModel.getHeader()}"
                 android:textSize="20sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:translationZ="10dp"
+                app:layout_constraintTop_toTopOf="@+id/mainCardView"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 tools:text="Alisa N.K."/>
 
         <TextView
                 android:id="@+id/textDescription"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:translationZ="10dp"
+                android:gravity="center"
                 android:textStyle="bold"
                 app:mutableText="@{viewModel.getContact()}"
                 app:layout_constraintTop_toBottomOf="@id/textHeader"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 tools:text="Alisa.Home.NK@gmail.com"/>
 
         <TextView
                 android:id="@+id/textSummary"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:translationZ="10dp"
                 app:mutableText="@{viewModel.getSummary()}"
-                android:padding="5dp"
                 app:layout_constraintTop_toBottomOf="@id/textDescription"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 tools:text="...."/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
