--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -14,8 +14,7 @@
 
         <!--TODO(Layouts): Move to another layout file-->
         <FrameLayout android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="?attr/actionBarSize">
+                     android:layout_height="wrap_content">
 
             <ProgressBar
                     android:id="@+id/progress"
@@ -23,7 +22,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     app:mutableVisibility="@{viewModel.getLoadingStatus()}"
-                    android:layout_marginTop="?attr/actionBarSize"
                     android:padding="5dp"/>
 
             <LinearLayout android:layout_width="match_parent"
