--- a/app/src/main/res/layout/info_adapter_item.xml
+++ b/app/src/main/res/layout/info_adapter_item.xml
@@ -3,67 +3,84 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
                 name="viewModel"
-                type="sample.settings.gensagames.samplejetpackmvvm.view.viewmodel.AdapterViewModel"/>
+                type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.AdapterViewModel"/>
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="200dp"
-            android:layout_height="150dp">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+                                                       android:layout_width="200dp"
+                                                       android:layout_height="150dp">
 
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/mainCardView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:cardBackgroundColor="@android:color/white"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="4dp"
-                app:cardElevation="10dp">
+                app:cardElevation="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+            <sample.settings.gensagames.samplejetpackmvvm.utils.KenBurnsView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:kenburnsImages="@{viewModel.getImageUrl()}"/>
+
         </androidx.cardview.widget.CardView>
 
         <TextView
                 android:id="@+id/textHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:mutableText="@{viewModel.getHeader()}"
-                android:textSize="20sp"
                 android:gravity="center"
+                android:textSize="20sp"
                 android:translationZ="10dp"
-                app:layout_constraintTop_toTopOf="@+id/mainCardView"
-                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                android:padding="2dp"
+                android:background="@color/colorTransparentWhite"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintTop_toTopOf="@+id/mainCardView"
+                app:mutableText="@{viewModel.getHeader()}"
                 tools:text="Alisa N.K."/>
 
         <TextView
                 android:id="@+id/textDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:translationZ="10dp"
                 android:gravity="center"
+                android:padding="3dp"
                 android:textStyle="bold"
-                app:mutableText="@{viewModel.getContact()}"
-                app:layout_constraintTop_toBottomOf="@id/textHeader"
-                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                android:translationZ="10dp"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintTop_toBottomOf="@id/textHeader"
+                app:mutableText="@{viewModel.getContact()}"
                 tools:text="Alisa.Home.NK@gmail.com"/>
 
         <TextView
                 android:id="@+id/textSummary"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:paddingTop="0dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="5dp"
                 android:translationZ="10dp"
-                app:mutableText="@{viewModel.getSummary()}"
-                app:layout_constraintTop_toBottomOf="@id/textDescription"
-                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="@+id/mainCardView"
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
+                app:layout_constraintStart_toStartOf="@+id/mainCardView"
+                app:layout_constraintTop_toBottomOf="@id/textDescription"
+                app:mutableText="@{viewModel.getSummary()}"
                 tools:text="...."/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
