--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
-    <dimen name="scrolling_app_bar_height">220dp</dimen>
+    <dimen name="header_elevation">20dp</dimen>
+    <dimen name="scrolling_app_bar_height">320dp</dimen>
 </resources>
