Updated DI with new correct sub components and behavior.

--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -35,8 +35,7 @@
                 <sample.settings.gensagames.samplejetpackmvvm.utils.KenBurnsView
                     android:id="@+id/headerKenburnsView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:kenburnsImages="@{viewModel.getInfoObject().getImageUrl()}" />
+                    android:layout_height="match_parent"/>
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
