--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -57,6 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
+            android:translationZ="@dimen/header_elevation"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|end"
             app:borderWidth="0dp"
