--- a/app/src/main/res/layout/adapter_info_item.xml
+++ b/app/src/main/res/layout/adapter_info_item.xml
@@ -33,7 +33,7 @@
             <sample.settings.gensagames.samplejetpackmvvm.utils.KenBurnsView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:staticKenburnsImages="@{viewModel.getInfoObject().getImageUrl()}"/>
+                    app:kenburnsImages="@{viewModel.getInfoObject()}"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -50,7 +50,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 app:layout_constraintStart_toStartOf="@+id/mainCardView"
                 app:layout_constraintTop_toTopOf="@+id/mainCardView"
-                app:staticText="@{viewModel.getInfoObject().getName()}"
+                app:infoObjectName="@{viewModel.getInfoObject()}"
                 tools:text="Alisa N.K."/>
 
         <TextView
@@ -65,7 +65,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 app:layout_constraintStart_toStartOf="@+id/mainCardView"
                 app:layout_constraintTop_toBottomOf="@id/textHeader"
-                app:staticText="@{viewModel.getInfoObject().getContact()}"
+                app:infoObjectContact="@{viewModel.getInfoObject()}"
                 tools:text="Alisa.Home.NK@gmail.com"/>
 
         <TextView
@@ -82,7 +82,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/mainCardView"
                 app:layout_constraintStart_toStartOf="@+id/mainCardView"
                 app:layout_constraintTop_toBottomOf="@id/textDescription"
-                app:staticText="@{viewModel.getInfoObject().getSummary()}"
+                app:infoObjectSummary="@{viewModel.getInfoObject()}"
                 tools:text="...."/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
