--- a/app/src/main/res/layout/detail_content.xml
+++ b/app/src/main/res/layout/detail_content.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto"
         tools:context=".view.DetailActivity">
 
     <data>
@@ -21,8 +22,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                tools:text="Sample Text Content"
-                app:mutableText="@{viewModel.getTextContent()}"/>
+                app:mutableText="@{viewModel.getTextContent()}"
+                tools:text="Sample Text Content"/>
 
     </androidx.core.widget.NestedScrollView>
 </layout>
