--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -1,68 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.DetailActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto"
+        tools:context=".view.DetailActivity">
 
     <data>
-
         <variable
-            name="viewModel"
-            type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.DetailViewModel" />
+                name="viewModel"
+                type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.DetailViewModel"/>
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/scrolling_app_bar_height"
-            android:translationZ="@dimen/header_elevation"
-            android:theme="@style/AppTheme.AppBarOverlay">
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/scrolling_app_bar_height"
+                android:translationZ="@dimen/header_elevation"
+                android:theme="@style/AppTheme.AppBarOverlay">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:toolbarId="@+id/toolbar">
+                    android:id="@+id/toolbar_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:toolbarId="@+id/toolbar">
 
                 <sample.settings.gensagames.samplejetpackmvvm.utils.KenBurnsView
-                    android:id="@+id/headerKenburnsView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                        android:id="@+id/headerKenburnsView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:kenburnsImages="@{viewModel.getInfoObject()}"/>
 
                 <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginTop="20dp"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:layout_collapseMode="pin" />
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_marginTop="20dp"
+                        app:contentScrim="?attr/colorPrimary"
+                        app:layout_collapseMode="pin"/>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
         <include
-            android:id="@+id/detail_content"
-            layout="@layout/detail_content" />
+                android:id="@+id/detail_content"
+                layout="@layout/detail_content"
+                bind:viewModel="@{viewModel}"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:translationZ="@dimen/header_elevation"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
-            app:borderWidth="0dp"
-            app:elevation="@dimen/header_elevation"
-            app:srcCompat="@android:drawable/ic_popup_disk_full" />
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                android:translationZ="@dimen/header_elevation"
+                app:layout_anchor="@id/app_bar"
+                app:layout_anchorGravity="bottom|end"
+                app:borderWidth="0dp"
+                app:elevation="@dimen/header_elevation"
+                app:srcCompat="@android:drawable/ic_popup_disk_full"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
