--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="viewModel"
-            type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel" />
+                name="viewModel"
+                type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel"/>
     </data>
 
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="?attr/actionBarSize">
 
         <ProgressBar
+                android:layout_marginTop="?attr/actionBarSize"
                 android:id="@+id/progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,7 +28,7 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorPrimaryLight"
                 android:padding="5dp">
 
             <TextView
@@ -34,7 +37,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:textStyle="bold"
                     android:textColor="@android:color/white"
+                    app:introObjectHeader="@{viewModel.getHeaderIntro()}"
                     tools:text="Header"/>
 
             <TextView
@@ -42,7 +47,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textStyle="bold"
                     android:gravity="center"
+                    app:introObjectMessage="@{viewModel.getHeaderIntro()}"
                     android:textColor="@android:color/white"
                     tools:text="Message"/>
         </LinearLayout>
