--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,72 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-                name="viewModel"
-                type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel"/>
+            name="viewModel"
+            type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel" />
 
 
         <variable
-                name="headerIntro"
-                type="sample.settings.gensagames.samplejetpackmvvm.model.dto.HeaderIntroObject"/>
+            name="headerIntro"
+            type="sample.settings.gensagames.samplejetpackmvvm.model.dto.HeaderIntroObject" />
     </data>
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="?attr/actionBarSize">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <ProgressBar
-                android:layout_marginTop="?attr/actionBarSize"
-                android:id="@+id/progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:padding="5dp"
-                app:mutableVisibility="@{viewModel.getLoadingStatus()}"/>
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="?attr/actionBarSize"
+            app:mutableVisibility="@{viewModel.getLoadingStatus()}" />
 
         <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/background_circle"
+            android:orientation="vertical"
+            android:padding="@dimen/header_circle_padding"
+            app:mutableVisibility="@{viewModel.getLoadingStatus()}">
+
+            <TextView
+                android:id="@+id/textMainHeader1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryLight"
-                android:padding="5dp">
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@{headerIntro.header}"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                tools:text="Header" />
 
             <TextView
-                    android:id="@+id/textMainHeader1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"
-                    android:text="@{headerIntro.header}"
-                    tools:text="Header"/>
-
-            <TextView
-                    android:id="@+id/textMainHeader2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textStyle="bold"
-                    android:gravity="center"
-                    android:text="@{headerIntro.message}"
-                    android:textColor="@android:color/white"
-                    tools:text="Message"/>
+                android:id="@+id/textMainHeader2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@{headerIntro.message}"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                tools:text="Message" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="?attr/actionBarSize"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </FrameLayout>
 </layout>
