--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="header_elevation">20dp</dimen>
+    <dimen name="header_circle_padding">30dp</dimen>
     <dimen name="scrolling_app_bar_height">320dp</dimen>
 </resources>
