--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,73 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="viewModel"
-            type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel" />
+                name="viewModel"
+                type="sample.settings.gensagames.samplejetpackmvvm.viewmodel.MainViewModel"/>
 
 
         <variable
-            name="headerIntro"
-            type="sample.settings.gensagames.samplejetpackmvvm.model.dto.HeaderIntroObject" />
+                name="headerIntro"
+                type="sample.settings.gensagames.samplejetpackmvvm.model.dto.HeaderIntroObject"/>
     </data>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
-
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="?attr/actionBarSize"
-            app:mutableVisibility="@{viewModel.getLoadingStatus()}" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/background_circle"
-            android:orientation="vertical"
-            android:padding="@dimen/header_circle_padding"
-            app:mutableVisibility="@{viewModel.getLoadingStatus()}">
-
-            <TextView
-                android:id="@+id/textMainHeader1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@{headerIntro.header}"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                tools:text="Header" />
-
-            <TextView
-                android:id="@+id/textMainHeader2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@{headerIntro.message}"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                tools:text="Message" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/recyclerHolderView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="?attr/actionBarSize">
+
+        <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="?attr/actionBarSize"
+                app:mutableVisibility="@{viewModel.getLoadingStatus()}"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/background_primary_rounded"
+                android:orientation="vertical"
+                android:padding="@dimen/header_circle_padding"
+                app:mutableVisibility="@{viewModel.getLoadingStatus()}">
+
+            <TextView
+                    android:id="@+id/textMainHeader1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@{headerIntro.header}"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    tools:text="Header"/>
+
+            <TextView
+                    android:id="@+id/textMainHeader2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@{headerIntro.message}"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    tools:text="Message"/>
+        </LinearLayout>
+
+
+        <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+        <!--<androidx.recyclerview.widget.RecyclerView-->
+                <!--android:id="@+id/recyclerView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--app:layout_constraintEnd_toEndOf="parent"-->
+                <!--app:layout_constraintStart_toStartOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent"/>-->
 
     </FrameLayout>
 </layout>
